[gd_scene load_steps=2 format=3 uid="uid://bydh8p05n5bux"]

[ext_resource type="Script" path="res://Scripts/MainScene.gd" id="1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="ServerConnectionMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="ServerConnectionMenu"]
layout_mode = 2
offset_left = 113.0
offset_top = 124.0
offset_right = 278.0
offset_bottom = 155.0
text = "Join Server"
metadata/_edit_use_anchors_ = true

[node name="SessionConnectionMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="SessionConnectionMenu"]
layout_mode = 0
offset_left = 101.0
offset_top = 76.0
offset_right = 302.0
offset_bottom = 337.0

[node name="SessionList" type="VBoxContainer" parent="SessionConnectionMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MakeSessionButton" type="Button" parent="SessionConnectionMenu/ScrollContainer/SessionList"]
layout_mode = 2
text = "Make Session"

[node name="StartPlayerControllMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="Button" parent="StartPlayerControllMenu"]
layout_mode = 0
offset_left = 113.0
offset_top = 124.0
offset_right = 278.0
offset_bottom = 155.0
text = "Play"

[connection signal="pressed" from="ServerConnectionMenu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SessionConnectionMenu/ScrollContainer/SessionList/MakeSessionButton" to="." method="_on_make_session_button_pressed"]
[connection signal="pressed" from="StartPlayerControllMenu/StartButton" to="." method="_on_start_button_pressed"]
